--- a/ml_metadata/simple_types/proto/BUILD
+++ b/ml_metadata/simple_types/proto/BUILD
@@ -11,31 +11,22 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-load("//ml_metadata:ml_metadata.bzl", "ml_metadata_proto_library", "ml_metadata_proto_library_py")
+load(
+    "//ml_metadata:ml_metadata.bzl",
+    "ml_metadata_proto_library",
+    "ml_metadata_proto_library_py",
+)
+load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
 
 package(default_visibility = ["//ml_metadata:__subpackages__"])
 
 licenses(["notice"])
 
-ml_metadata_proto_library(
-    name = "simple_types_proto",
+py_proto_library(
+    name = "simple_types_pb2",
     srcs = ["simple_types.proto"],
     deps = [
+        ":simple_types_proto",
         "//ml_metadata/proto:metadata_store_proto",
     ],
 )
-
-ml_metadata_proto_library_py(
-    name = "simple_types_py_pb2",
-    srcs = ["simple_types.proto"],
-    api_version = 2,
-    oss_deps = ["//ml_metadata/proto:metadata_store_py_pb2"],
-    proto_library = "simple_types_proto",
-)
-
-native.py_library(
-    name = "simple_types_pb2",
-    srcs = ["simple_types.py"],
-    deps = [":simple_types_py_pb2"],
-)
-
