--- a/ml_metadata/proto/BUILD
+++ b/ml_metadata/proto/BUILD
@@ -1,3 +1,17 @@
+alias(
+    name = "metadata_store_pb2.py",
+    actual = ":metadata_store_py_pb2",
+)
+
+alias(
+    name = "metadata_store_service_pb2.py",
+    actual = ":metadata_store_service_py_pb2",
+)
+
+alias(
+    name = "metadata_store_service_pb2_grpc.py",
+    actual = ":metadata_store_service_py_pb2",
+)
 # Copyright 2020 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -7,34 +21,45 @@
 #      http://www.apache.org/licenses/LICENSE-2.0
 #
 # Unless required by applicable law or agreed to in writing, software
-# distributed under the License is an "AS IS" BASIS,
+# distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-load(
-    "//ml_metadata:ml_metadata.bzl",
-    "ml_metadata_proto_library",
-    "ml_metadata_proto_library_go",
-    "ml_metadata_proto_library_py",
-)
-load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
-
+load("//ml_metadata:ml_metadata.bzl", "ml_metadata_proto_library", "ml_metadata_proto_library_go", "ml_metadata_proto_library_py")
 
 package(default_visibility = ["//visibility:public"])
 
 licenses(["notice"])
 
-py_proto_library(
-    name = "metadata_store_pb2",
+ml_metadata_proto_library(
+    name = "metadata_store_proto",
     srcs = ["metadata_store.proto"],
+    deps = ["@com_google_protobuf//:cc_wkt_protos"],
+)
+
+ml_metadata_proto_library(
+    name = "metadata_store_service_proto",
+    srcs = ["metadata_store_service.proto"],
+    has_services = 1,
+    cc_grpc_version = 1,
     deps = [":metadata_store_proto"],
 )
 
-py_proto_library(
-    name = "metadata_store_service_pb2",
+ml_metadata_proto_library_py(
+    name = "metadata_store_py_pb2",
+    srcs = ["metadata_store.proto"],
+    api_version = 2,
+    proto_library = "metadata_store_proto",
+)
+
+ml_metadata_proto_library_py(
+    name = "metadata_store_service_py_pb2",
     srcs = ["metadata_store_service.proto"],
-    deps = [":metadata_store_service_proto"],
+    api_version = 2,
+    oss_deps = [":metadata_store_py_pb2"],
+    proto_library = "metadata_store_service_proto",
+    use_grpc_plugin = True,
 )
 
 ml_metadata_proto_library_go(
