--- a/ml_metadata/simple_types/proto/BUILD
+++ b/ml_metadata/simple_types/proto/BUILD
@@ -1,3 +1,7 @@
+alias(
+    name = "simple_types_pb2.py",
+    actual = ":simple_types_py_pb2",
+)
 # Copyright 2021 Google LLC
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -11,22 +15,24 @@
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 # See the License for the specific language governing permissions and
 # limitations under the License.
-load(
-    "//ml_metadata:ml_metadata.bzl",
-    "ml_metadata_proto_library",
-    "ml_metadata_proto_library_py",
-)
-load("@com_google_protobuf//:protobuf.bzl", "py_proto_library")
+load("//ml_metadata:ml_metadata.bzl", "ml_metadata_proto_library", "ml_metadata_proto_library_py")
 
 package(default_visibility = ["//ml_metadata:__subpackages__"])
 
 licenses(["notice"])
 
-py_proto_library(
-    name = "simple_types_pb2",
+ml_metadata_proto_library(
+    name = "simple_types_proto",
     srcs = ["simple_types.proto"],
     deps = [
-        ":simple_types_proto",
         "//ml_metadata/proto:metadata_store_proto",
     ],
+)
+
+ml_metadata_proto_library_py(
+    name = "simple_types_py_pb2",
+    srcs = ["simple_types.proto"],
+    api_version = 2,
+    oss_deps = ["//ml_metadata/proto:metadata_store_py_pb2"],
+    proto_library = "simple_types_proto",
 )
